--- a/index.html
+++ b/index.html
@@ -1,28 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html  ng-app="firstApp">
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <link href="https://code.ionicframework.com/1.0.0/css/ionic.min.css" rel="stylesheet">
-    <script src="https://code.ionicframework.com/1.0.0/js/ionic.bundle.js"></script>
-      <!-- this is where i include my js files -->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, 
+                   user-scalable=no, width=device-width">
+    <link href="http://code.ionicframework.com/1.0.0/css/ionic.min.css" rel="stylesheet">
+    <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.js"></script>
+    <!-- include the javascript app.js source file -->
+    <script src="credentials.js"></script>
+    <script src="services.js"></script>
     <script src="app.js"></script>
-  </head>
-  <body ng-app="myApp" ng-controller="name-two">
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Awesome App</h1>
-      </ion-header-bar>
-      <ion-content class="padding">
-        <ion-list>
-  <ion-item ng-repeat="item in items track by $index">
-    {{$index}} - {{items.name}} - {{items.room}}!
-  </ion-item>
-</ion-list>
+</head>
+<body ng-controller="firstController">
+   <!-- add some ionic style with header -->
+   <ion-header-bar class="bar-royal">
+        <h1 class="title">Jenns Page</h1>
+   </ion-header-bar>
+   <!-- ionic content area -->
+   <ion-content class="padding">
+      <ion-list>
+      <ion-item class="item-divider">Quick Add</ion-item>
+  
 
-<ion-content>
-        {{Jennifer}}
-      </ion-content>
-    </ion-pane>
-  </body>
+   <div class="item-input">
+    <label class="item-input-wrapper">
+        <!-- enter values separated by coma -->
+        <input type="text" placeholder="name, room" ng-model="inputItem.value">
+    </label>
+    <button class="button button-clear" ng-click="addItem()">ADD
+    </button>
+  </div>
+         <!-- add a section header -->
+         <div class="bar bar-header">
+  <h1 class="title">Howard University School of Business</h1>
+</div>
+<div class="bar bar-header bar-energized">
+  <h1 class="title">Lookup</h1>
+</div>
+         <ion-item class="item-divider">Some Stuff Data</ion-item>
+        <!-- iterate thru the list, use item.objectId as item identifier -->
+        <ion-item ng-repeat="item in itemsList track by item.objectId">
+        <div>{{item.objectId}}</div>
+        <div style="text-transform:capitalize;">
+        {{item.name }} {{item.room}}
+        </div>
+        <div class="text-right">
+        <button class="ion-edit button"
+                ng-click="editObject(item)">
+        </button>
+        <button class="ion-minus-circled button"
+                ng-click="deleteObject(item.objectId)">
+        </button>
+        </div>
+            </ion-item>
+      </ion-list>
+   </ion-content>
+</body>
 </html>
