--- a/home.html
+++ b/home.html
@@ -1,8 +1,25 @@
+<html  ng-app="firstApp">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, 
+                   user-scalable=no, width=device-width">
+    <link href="http://code.ionicframework.com/1.0.0/css/ionic.min.css" rel="stylesheet">
+    <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.js"></script>
+    <!-- include the javascript app.js source file -->
+    <script src="credentials.js"></script>
+    <script src="services.js"></script>
+    <script src="app.js"></script>
+    <script src="home.html"></script>
+    <script src="detail.html"></script>
+</head>
+
 <ion-view title="Home">
-   <ion-content class="padding">
-      <button class="button button-assertive" ui-sref="detail">
-        Goto State 'detail'
-      </button>
-      <pre class="padding">{{stateInfo | json}}</pre>
-   </ion-content>        
+	<ion-content="padding">
+	<button class="button button-assertive" ui-sref="detail">
+		Goto State 'detail'
+	</button>
+		<pre class="padding">{{stateInfo | json}}</pre>
+	</ion-content>
 </ion-view>
+</body>
+</html>
