--- a/detail.html
+++ b/detail.html
@@ -1,7 +1,29 @@
-     
+ <html  ng-app="firstApp">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, 
+                   user-scalable=no, width=device-width">
+    <link href="http://code.ionicframework.com/1.0.0/css/ionic.min.css" rel="stylesheet">
+    <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.js"></script>
+    <!-- include the javascript app.js source file -->
+    <script src="credentials.js"></script>
+    <script src="services.js"></script>
+    <script src="app.js"></script>
+    <script src="home.html"></script>
+    <script src="detail.html"></script>
+</head>
+<body ng-controller="firstController">
+   <!-- add some ionic style with header -->
+   <ion-header-bar class="bar-royal">
+        <h1 class="title">Jenns Page $http</h1>
+   </ion-header-bar>
+<ion-view>
+
 </ion-view>
 <ion-view title="Detail">
    <ion-content class="padding">
       <pre class="padding">{{stateInfo | json}}</pre>
    </ion-content>        
 </ion-view>
+</body>
+</html>
